--- a/CapaPresentacionAdmin/Views/Mantenedor/Marca.cshtml
+++ b/CapaPresentacionAdmin/Views/Mantenedor/Marca.cshtml
@@ -132,9 +132,9 @@
 			},
 			"columns": [
 			//"data" es lo que se envia del controller
-				{ "data": "Descripcion" },
+				{ "data": "Descripcion", "width": "300px" },
 				{
-					"data": "Activo", "render": function (valor) {
+					"data": "Activo", "width": "90px","render": function (valor) {
 
 						if (valor) {
 							return '<span class="badge bg-success">Si</span>';
